@@ -12,6 +12,7 @@
 		<script type="text/javascript" src="js/buildings/abstract.js"></script>
 		<script type="text/javascript" src="js/buildings/headquarter.js"></script>
 		<script type="text/javascript" src="js/buildings/water_launch_pad.js"></script>
+		<script type="text/javascript" src="js/buildings/taelon_power_generator.js"></script>
 		<script type="text/javascript" src="js/buildings/camera_tower.js"></script>
 		<script type="text/javascript" src="js/unit.js"></script>
 		<script type="text/javascript" src="js/construct_manager.js"></script>
