@@ -21,7 +21,7 @@ CameraTowerBuilding.box_image = 'camera_tower_box.png';
 CameraTowerBuilding.res_key = 'camera_tower.png';
 CameraTowerBuilding.obj_name = 'Camera Tower';
 CameraTowerBuilding.cost = 200;
-HeadquarterBuilding.energy = 50;
+CameraTowerBuilding.energy = 50;
 CameraTowerBuilding.enabled = false;
 CameraTowerBuilding.count = 0;
 CameraTowerBuilding.cell_size = {x: 1, y: 2};
